@@ -69,3 +69,4 @@
 - In optimizer, added a function that tokenizes an expression
 - Document about complexity of operations
 - Bug: error in update operation, it changed the original tuple, so also other relations using the same tuple would change. Now it copies it.
+- Added make install and uninstall
